--- a/styles/default/mobile/update.css
+++ b/styles/default/mobile/update.css
@@ -50,9 +50,9 @@ output.chatOutput
 
 	min-width: 200px;
 
-	width: 100%;
+	width: auto;
 
-	max-width: 100%;
+	max-width: 1024px;
 
 	overflow-x: hidden;
 
