--- a/styles/default/mobile/view.css
+++ b/styles/default/mobile/view.css
@@ -240,7 +240,7 @@ input.fileStatsField
 
 	word-wrap: normal;
 
-	display: none;
+	display: inline-block;
 
 	position: relative;
 
